# natural-selection-rs

./: Cargo.toml  README.md  game1.d.ts  game1.js  game1_bg.wasm.d.ts  index.html  run.sh
src/: main.rs
