[package]
name = "game1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy)
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.7", features = ["dynamic"]}
bevy_egui = "0.14"
rand = "0.8"